#20 S3 static website hosting

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple HTML Demo Page</title>
+    <title>My Static Page</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to My Simple Demo Page</h1>
+        <h1>Welcome to My Static Page from Terraform</h1>
     </header>
     
     <nav>
