#22 CDN implementation for s3 busket

--- a/public/error.html
+++ b/public/error.html
@@ -1,1 +1,10 @@
-This is the error page
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Error Page</title>
+</head>
+<body>
+    <h1>Oops! An Error Occurred</h1>
+    <p>We're sorry, but something went wrong on our website.</p>
+</body>
+</html>
